# cortex-r

./: Cargo.toml  README.md  criticalup.toml
.cargo/: config.toml
.github/workflows/: build.yml
arm-gic/: README.md
arm-gic/src/: gicv2.rs  gicv3.rs  sysreg.rs
arm-semihosting/: Cargo.toml  README.md  build.rs
arm-semihosting/src/: export.rs  lib.rs
arm-targets/: Cargo.toml  README.md
arm-targets/src/: lib.rs
cortex-r/: Cargo.toml  README.md
cortex-r-examples/: Cargo.toml  README.md  build.rs  versatileab.ld
cortex-r-examples/.cargo/: config.toml
cortex-r-examples/src/: lib.rs
cortex-r-rt/: Cargo.toml  README.md  build.rs  link.x
cortex-r-rt/src/: lib.rs
cortex-r-semihosting/: Cargo.toml  README.md
cortex-r-semihosting/src/: debug.rs  export.rs  hio.rs  lib.rs
cortex-r/src/: critical_section.rs  interrupt.rs  lib.rs
cortex-r/src/register/: cbar.rs  cpsr.rs  hactlr.rs  hvbar.rs  midr.rs  mod.rs  sctlr.rs  vbar.rs
