[package]
authors = ["Jonathan Pallant <jonathan.pallant@ferrous-systems.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "arm-semihosting"
description = "Semihosting support for Arm processors"
readme = "README.md"
repository = "https://github.com/ferrous-systems/cortex-r.git"
rust-version = "1.76"
version = "0.1.0"

[dependencies]
critical-section = "1.2.0"

[build-dependencies]
arm-targets = { version = "0.1.0", path = "../arm-targets" }

[features]
jlink-quirks = []
no-semihosting = []
# Perform semihosting using an HLT instruction, and not an SVC instruction, on
# targets where both are an option (e.g. Arm Cortex-R and 32-bit Arm Cortex-A)
use-hlt = []
