[package]
authors = ["Jonathan Pallant <jonathan.pallant@ferrous-systems.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "cortex-r-examples"
description = "Examples for Arm Cortex-R"
readme = "README.md"
repository = "https://github.com/ferrous-systems/cortex-r.git"
rust-version = "1.82"
version = "0.1.0"
default-run = "hello"

[dependencies]
cortex-r = { path = "../cortex-r", features=["critical-section-single-core"] }
cortex-r-rt = { path = "../cortex-r-rt" }
arm-semihosting = { path = "../arm-semihosting" }
arm-gic = { git = "https://github.com/jonathanpallant/arm-gic.git", rev="90322fe33601021bbbec7a62dc5e853fc925f3fb", optional = true }

[features]
eabi-fpu = ["cortex-r-rt/eabi-fpu"]
gic = ["arm-gic"]

[[bin]]
name = "gic"
required-features = ["gic"]
