[package]
authors = ["Jonathan Pallant <jonathan.pallant@ferrous-systems.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "cortex-r-rt"
description = "Run-time support for Arm Cortex-R"
readme = "README.md"
repository = "https://github.com/ferrous-systems/cortex-r.git"
rust-version = "1.82"
version = "0.1.0"

[dependencies]
arm-semihosting = { version = "0.1.0", path = "../arm-semihosting" }
cortex-r = { version = "0.1.0", path = "../cortex-r" }

[features]
# Enable the FPU on start-up, even on a soft-float EABI target
eabi-fpu = []

[build-dependencies]
arm-targets = { version = "0.1.0", path = "../arm-targets" }
