[package]
authors = ["Jonathan Pallant <jonathan.pallant@ferrous-systems.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "cortex-r"
description = "CPU support for Arm Cortex-R"
readme = "README.md"
repository = "https://github.com/ferrous-systems/cortex-r.git"
rust-version = "1.76"
version = "0.1.0"

[dependencies]
critical-section = { version = "1.2.0", features = ["restore-state-bool"] }
